# nps_uw_multibeam_sonar

./: .gitignore  CITATION.cff  CMakeLists.txt  Changelog.md  README.md  package.xml
config/: sonar_tank_blueview_m450_images.perspective  sonar_tank_blueview_p900_images.perspective  sonar_tank_seabat_f50_images.perspective
gpgpu-sim/: Dockerfile
gpgpu-sim/Executable/.catkin_tools/profiles/default/: devel_collisions.txt
gpgpu-sim/Executable/src/gpgpu/: CMakeLists.txt  package.xml
gpgpu-sim/Executable/src/gpgpu/src/: sonar_test.cu
gpgpu-sim/Library_single/.catkin_tools/profiles/default/: devel_collisions.txt
gpgpu-sim/Library_single/src/gpgpu/: CMakeLists.txt
gpgpu-sim/Library_single/src/gpgpu/include/gpgpu/: sonar_test.cuh
gpgpu-sim/Library_single/src/gpgpu/src/: sonar_test.cu
include/nps_uw_multibeam_sonar/: gazebo_multibeam_sonar_raster_based.hh  gazebo_multibeam_sonar_ray_based.hh  gazebo_ros_multibeam_sonar.hh  multibeam_sonar_ray_based.hh  sonar_calculation_cuda.cuh
launch/: local_search_blueview_p900_nps_multibeam_raster.launch  local_search_blueview_p900_nps_multibeam_ray.launch  local_search_blueview_p900_nps_multibeam_urdf_standalone_raster.launch  local_search_blueview_p900_nps_multibeam_urdf_standalone_ray.launch  local_search_vase_blueview_p900_nps_multibeam_ray.launch  sonar_shipwreck_blueview_p900_nps_multibeam.launch  sonar_tank_blueview_m450_nps_multibeam.launch  sonar_tank_blueview_p900_nps_multibeam.launch  sonar_tank_blueview_p900_nps_multibeam_ray.launch  sonar_tank_blueview_p900_nps_multibeam_urdf.launch  sonar_tank_oculus_m1200d_nps_multibeam.launch  sonar_tank_oculus_m1200d_nps_multibeam_HF.launch  sonar_tank_oculus_m1200d_nps_multibeam_HF_cylinder.launch  sonar_tank_oculus_m1200d_nps_multibeam_LF.launch  sonar_tank_oculus_m1200d_nps_multibeam_customSDFTag.launch  sonar_tank_seabat_f50_nps_multibeam.launch  sonar_vase_blueview_p900_nps_multibeam.launch  validation_HF_RodAngle0_D50.launch  validation_LF_RodAngle15_D50.launch  validation_LF_RodAngle30_D50.launch
models/Coke_Can/: coke_rubber.mtl
models/blueview_m450_nps_multibeam/: model.config  model.sdf
models/blueview_m450_nps_multibeam/meshes/: BlueView-M450.dae  COLLISION-BlueView-M450.dae
models/blueview_p900_nps_multibeam/: model.sdf
models/blueview_p900_nps_multibeam_ray/: model.sdf
models/blueview_p900_nps_multibeam_ray/meshes/: p900.dae
models/bolt_model/: model.config  model.sdf
models/bolt_model/meshes/: bolt_simplified.stl  bolt_simplified_large.stl
models/bolt_target/: model.config  model.sdf
models/coke_can_rubber/: model.config  model.sdf
models/coke_can_steel/: model.config  model.sdf
models/coke_can_steel/meshes/: coke_can.mtl
models/coke_can_steel_distorted/: model.config  model.sdf
models/coke_can_steel_distorted/meshes/: coke_can_distort.mtl
models/cylinder_sonar_tank/: model.config  model.sdf
models/cylinder_sonar_tank/meshes/: COLLISION_cylinder_sonar_tank.stl
models/oculus_m1200d_nps_multibeam/: model.config  model.sdf
models/oculus_m1200d_nps_multibeam/meshes/: COLLISION-Oculus-M-series.dae
models/oculus_m1200d_nps_multibeam_HF/: model.sdf
models/oculus_m1200d_nps_multibeam_LF/: model.sdf
models/oculus_m1200d_nps_multibeam_customSDFTag/: model.sdf
models/oculus_m1200d_nps_multibeam_customSDFTag/meshes/: COLLISION-p900.dae  Oculus-M-series.dae
models/plate_holes/: model.config  model.sdf
models/plate_model/: model.config  model.sdf
models/plate_model/meshes/: COLLISION_plate_model.stl  plate_model_noholes.stl
models/plate_target/: model.config  model.sdf
models/rod_target/: model.config  model.sdf
models/rod_target/meshes/: COLLISION_rod_target.stl
models/seabat_f50_nps_multibeam/: model.config  model.sdf
models/seabat_f50_nps_multibeam/meshes/: COLLISION-SeaBat-F50.dae  SeaBat-F50.dae
models/uw_apl_rod/: model.config  model.sdf
rviz/: ray.rviz
scripts/: bag2file.py  maneuver.py  plotCompare.m  plotRawData.m  plotRawData_GPURay_based.m  plotRawData_Raster_based.m  plotWriteLogCSV_camera_based.m  plotWriteLogCSV_ray_based.m
src/: MaterialSwitcher.cc  SelectionBuffer.cc  SelectionRenderListener.cc  gazebo_multibeam_sonar_camera_based.cpp  gazebo_multibeam_sonar_raster_based.cpp  gazebo_multibeam_sonar_ray_based.cpp  gazebo_ros_multibeam_sonar.cpp  multibeam_sonar_ray_based.cpp  sonar_calculation_cuda.cu
urdf/: multibeam_sonar_blueview_p900.xacro
worlds/: customSDFTagDatabase.csv  local_search.world  local_search_blueview_p900_nps_multibeam_raster.world  local_search_blueview_p900_nps_multibeam_ray.world  local_search_vase_blueview_p900_nps_multibeam_ray.world  sonar_shipwreck_blueview_p900_nps_multibeam.world  sonar_tank.world  sonar_tank_blueview_m450_nps_multibeam.world  sonar_tank_blueview_p900_nps_multibeam.world  sonar_tank_blueview_p900_nps_multibeam_ray.world  sonar_tank_oculus_m1200d_nps_multibeam.world  sonar_tank_oculus_m1200d_nps_multibeam_HF.world  sonar_tank_oculus_m1200d_nps_multibeam_HF_cylinder.world  sonar_tank_oculus_m1200d_nps_multibeam_LF.world  sonar_tank_oculus_m1200d_nps_multibeam_customSDFTag.world  sonar_tank_seabat_f50_nps_multibeam.world  sonar_vase_blueview_p900_nps_multibeam.world  validation_HF_RodAngle0_D50.world  validation_LF_RodAngle15_D50.world  validation_LF_RodAngle30_D50.world  variationalReflectivityDatabase.csv  variationalReflectivityDatabase_APL.csv
